[package]
name = "arctix-autoamta"
version = "0.1.0"
authors = ["Andrew Glenn <andrew.glenn@southgatehouse.com.au>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "0.3"
actix-session = "0.4"
actix-service = "1.0.0"
actix-utils = "2"
env_logger = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"
futures = "0.3.1"